--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
 <body>
     
 
-    <script>
-        var color = 'orange '; /*string*/
-        var num = 10; /*number*/
-        var myStudentsAreAwesome = true; /*boolean*/
-        var thisClassIsEasy = false;
-
-// typeof + value = will tell you if it's a number, string, etc.
-
-        console.log(5 / 5);
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
